tests/error/struct_errors/type_missing2.py
from guppylang.decorator import guppy


@guppy.struct
class MyStruct:
    x = 42


MyStruct.compile()
