tests/error/struct_errors/type_missing2.err
Error: Unexpected statement (at $FILE:6:4)
  | 
4 | @guppy.struct
5 | class MyStruct:
6 |     x = 42
  |     ^^^^^^ Unexpected statement in struct definition

Guppy compilation failed due to 1 previous error
